[package]
name = "ringbuffer"
version = "0.1.0"
authors = ["Tino Rusch <tino.rusch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.2"
simple-error = "*"

[[bench]]
name = "benchmark"
harness = false
